refactor(config): improve security and oauth2 flow
- replace wildcard CORS origins with configurable allowed origins
- remove redundant CorsFilter in favor of WebMvcConfigurer and SecurityConfig
- update OAuth2SuccessHandler to redirect to frontend with encoded tokens instead of returning JSON
- configure authentication entry point to return 401 Unauthorized instead of redirecting
- add app.frontend.url property to application.properties
- update Google OAuth2 redirect-uri pattern to use Spring's {baseUrl} template